--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,67 +1,82 @@
-/*
-Error: Invalid CSS after "... "compass/css3"": expected selector or at-rule, was "$font-blue: blue;"
-        on line 4 of /Users/luchen/Documents/gitHub/wh-3pages3weeks/static-pages-boilerplate/sass/style.scss
+/* line 5, ../../../../../.rvm/gems/ruby-2.0.0-p481/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  font-size: 100%;
+  vertical-align: baseline;
+}
 
-1: @import "compass/reset";
-2: @import "compass/css3"
-3: 
-4: $font-blue: blue;
-5: $font-size: 4em;
-6: $font-weight: 700;
-7: 
-8: html {
-9:     font-size:62.5%;
+/* line 22, ../../../../../.rvm/gems/ruby-2.0.0-p481/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+html {
+  line-height: 1;
+}
 
-Backtrace:
-/Users/luchen/Documents/gitHub/wh-3pages3weeks/static-pages-boilerplate/sass/style.scss:4
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/sass-3.4.11/lib/sass/scss/parser.rb:1165:in `expected'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/sass-3.4.11/lib/sass/scss/parser.rb:1101:in `expected'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/sass-3.4.11/lib/sass/scss/parser.rb:43:in `parse'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/sass-3.4.11/lib/sass/engine.rb:393:in `_to_tree'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/sass-3.4.11/lib/sass/engine.rb:268:in `render'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:17:in `block in render'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:29:in `with_import_scope'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:16:in `render'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/sass-3.4.11/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/sass-3.4.11/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/sass-3.4.11/lib/sass/plugin/compiler.rb:209:in `each'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/sass-3.4.11/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/compass-1.0.3/lib/compass/sass_compiler.rb:40:in `compile!'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/compass-1.0.3/lib/compass/commands/update_project.rb:49:in `perform'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/compass-1.0.3/lib/compass/commands/base.rb:18:in `execute'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/compass-1.0.3/lib/compass/commands/project_base.rb:19:in `execute'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-compass-1.1.0/lib/guard/compass.rb:140:in `perform'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-compass-1.1.0/lib/guard/compass.rb:123:in `run_on_change'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-2.8.2/lib/guard/runner.rb:77:in `block in _supervise'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-2.8.2/lib/guard/runner.rb:74:in `catch'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-2.8.2/lib/guard/runner.rb:74:in `_supervise'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-2.8.2/lib/guard/runner.rb:57:in `block (2 levels) in run_on_changes'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-2.8.2/lib/guard/runner.rb:51:in `each'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-2.8.2/lib/guard/runner.rb:51:in `block in run_on_changes'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-2.8.2/lib/guard/runner.rb:135:in `block (3 levels) in _scoped_plugins'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-2.8.2/lib/guard/runner.rb:133:in `each'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-2.8.2/lib/guard/runner.rb:133:in `block (2 levels) in _scoped_plugins'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-2.8.2/lib/guard/runner.rb:132:in `catch'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-2.8.2/lib/guard/runner.rb:132:in `block in _scoped_plugins'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-2.8.2/lib/guard/runner.rb:129:in `each'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-2.8.2/lib/guard/runner.rb:129:in `_scoped_plugins'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-2.8.2/lib/guard/runner.rb:48:in `run_on_changes'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-2.8.2/lib/guard/setuper.rb:212:in `_process_queue'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-2.8.2/lib/guard/commander.rb:34:in `start'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-2.8.2/lib/guard/cli.rb:113:in `start'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/thor-0.19.1/lib/thor/command.rb:27:in `run'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/thor-0.19.1/lib/thor/invocation.rb:126:in `invoke_command'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/thor-0.19.1/lib/thor.rb:359:in `dispatch'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/thor-0.19.1/lib/thor/base.rb:440:in `start'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-2.8.2/lib/guard/aruba_adapter.rb:32:in `execute'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-2.8.2/lib/guard/aruba_adapter.rb:19:in `execute!'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/gems/guard-2.8.2/bin/guard:11:in `<top (required)>'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/bin/guard:23:in `load'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/bin/guard:23:in `<main>'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/bin/ruby_executable_hooks:15:in `eval'
-/Users/luchen/.rvm/gems/ruby-2.0.0-p481/bin/ruby_executable_hooks:15:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Invalid CSS after \"... \"compass/css3\"\": expected selector or at-rule, was \"$font-blue: blue;\"\A         on line 4 of /Users/luchen/Documents/gitHub/wh-3pages3weeks/static-pages-boilerplate/sass/style.scss\A \A 1: @import \"compass/reset\";\A 2: @import \"compass/css3\"\A 3: \A 4: $font-blue: blue;\A 5: $font-size: 4em;\A 6: $font-weight: 700;\A 7: \A 8: html {\A 9:     font-size:62.5%;"; }
+/* line 24, ../../../../../.rvm/gems/ruby-2.0.0-p481/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+ol, ul {
+  list-style: none;
+}
+
+/* line 26, ../../../../../.rvm/gems/ruby-2.0.0-p481/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* line 28, ../../../../../.rvm/gems/ruby-2.0.0-p481/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+caption, th, td {
+  text-align: left;
+  font-weight: normal;
+  vertical-align: middle;
+}
+
+/* line 30, ../../../../../.rvm/gems/ruby-2.0.0-p481/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+q, blockquote {
+  quotes: none;
+}
+/* line 103, ../../../../../.rvm/gems/ruby-2.0.0-p481/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+q:before, q:after, blockquote:before, blockquote:after {
+  content: "";
+  content: none;
+}
+
+/* line 32, ../../../../../.rvm/gems/ruby-2.0.0-p481/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+a img {
+  border: none;
+}
+
+/* line 116, ../../../../../.rvm/gems/ruby-2.0.0-p481/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+  display: block;
+}
+
+/* line 9, ../sass/style.scss */
+html {
+  font-size: 62.5%;
+}
+/* line 11, ../sass/style.scss */
+html body {
+  width: 122em;
+  margin: 0 auto;
+}
+/* line 14, ../sass/style.scss */
+html body h1 {
+  text-align: center;
+  margin: 2em auto;
+  color: blue;
+  font-size: 4em;
+  font-weight: 700;
+}
