--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -76,7 +76,7 @@ html body {
 html body h1 {
   text-align: center;
   margin: 2em auto;
-  color: blue;
+  color: red;
   font-size: 4em;
   font-weight: 700;
 }
