--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,5 +18,10 @@ html {
 			font-size: $font-size;
 			font-weight:$font-weight;
 		}
+		h2{
+			margin: 2em auto;
+			color: $font-color;
+			text-align: center;
+		}
 	}
 }
